assets/styles/scss/style.scss
@import url(https://fonts.googleapis.com/css?family=Orbitron:400,500,900,700);

@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600,700,900);

@mixin prefix($property, $value, $prefixes: ()) {
  @each $prefix in $prefixes {
    #{'-' + $prefix + '-' + $property}: $value;
  }
  #{$property}: $value;
}

// @include prefix(display, flex, webkit ms);
// @include prefix(display, flexbox, ms);
// @include prefix(display, box, webkit);
// @include prefix(flex-direction, column, webkit);
// @include prefix(justify-content, center, webkit);

/**********************************************
MAIN CSS
**********************************************/
$brightBlueColorRGBA: 0, 190, 235;
$brightBlueColorHex: #00BEEB;
$deepBlueColorRGBAfull: RGBA(36, 95, 146, 1);
$deepBlueColorRGBApart: 36, 95, 146;
$deepBlueColorHEX: #205E94;

html, body, header, div, img, h1, ul, ol, li, {
  margin: 0;
  border: 0;
  padding: 0;
  box-sizing: border-box;
  @include prefix(box-sizing, border-box, webkit moz);
}
html {
  font-size: 20px;
}
body {
  margin: 0 auto;
  letter-spacing: .05em;
  font: {
    size: 100%;
    family: "Source Sans Pro", sans-serif;
    weight: 600;
  }
  background: {
    image: url("../../images/lilly-lighter-bg.jpg");
  }
}
/**********************************************
MEDIA QUERY - SMALL - MOBILE
**********************************************/
div.wrapper {
  width: 100%;
  margin: 0 auto;
  // background: RGBA(255, 255, 255, 0.8);
  // background: RGBA(149, 121, 109, .5);
  padding-bottom: 3em;
  // background: rgba(0, 0, 0, 0.2);
}
div.container-fluid {
  padding: 0;
}
/**********************************************
HEADING
**********************************************/
header {
  width: 100%;
  margin: 0 auto;
  text-align: center;
  h1 {
    margin-top: .2em;
    letter-spacing: .2em;
    color: $deepBlueColorRGBAfull;
    text-shadow: 2px 2px 3px white;
    display: inline-block;
    padding-bottom: .5em;
    font: {
      size: 2em;
      weight: 900;
      family: "Orbitron", cursive;
    }
    // border: 2px solid orange;
  }
  img#cat {
    width: 3em;
    vertical-align: bottom;
    // border: 2px solid blue;
  }
}
/**********************************************
GAME SETTINGS
**********************************************/
div.info-game-container {
  div.game-info-div {
    margin: 0 auto;
    width: 100%;
    div.game-info {
      max-width: 75%;
      margin: 1em auto;
      background-color: RGBA(255, 255, 255, .8);
      font-size: .8em;
      img#settings-icon,
      img#game-directions {
        width: 2.5em;
      }
      img#star-icon {
        width: 2em;
      }
      &.game-mode {
        font-variant: small-caps;
        text-align: center;
        .mode:active {
          cursor: pointer;
          background-color: RGBA($deepBlueColorRGBApart, .5);
          color: white;
        }
      }
      &.game-directions {
        li#medium-directions,
        li#hard-directions {
          display: none;
        }
      }
    }
    ul {
      list-style-type: none;
      ol {
        list-style-position: inside;
      }
    }
    ul {
      li, p {
        padding: 0 .2em;
      }
      &>li:first-child {
        width: 100%;
        background: RGBA($deepBlueColorRGBApart, .8);
        color: white;
        text-shadow: 1px 1px 2px black;
        text-align: center;
        padding: .2em;
        font: {
          weight: 700;
          variant: small-caps;
          size: 1em;
        }
      }
    }
  } /* Ends div.game-info-div */
  div#game-cards {
    margin: 0 auto;
    width: 95%;
    height: 500px;
    background-color: RGBA($deepBlueColorRGBApart, .8);
  }
} /* Ends div.info-game-container */
.activeLi {
  background-color: RGBA($deepBlueColorRGBApart, .5);
  color: white;
}
.hoverLi {
  cursor: pointer;
  background-color: RGBA($deepBlueColorRGBApart, .2);
  color: lighten($deepBlueColorHEX, 10%);
}
/**********************************************
MEDIA QUERY - MEDIUM > 768px
**********************************************/
@media (min-width: 768px) {

  h1:before {
    content: "Width of 768px";
    font-size: .3em;
  }
  body {
    width: 95%;
    max-width: 1200px;
    margin-top: 1em;
  }
  div.info-game-container {
    @include prefix(display, flex, webkit ms);
    @include prefix(display, flexbox, ms);
    @include prefix(display, box, webkit);
    @include prefix(flex-direction, row, webkit);
    div.game-info-div {
      max-width: 23%;
      margin-left: .5%;
      margin-right: .5%;
      @include prefix(display, flex, webkit ms);
      @include prefix(display, flexbox, ms);
      @include prefix(display, box, webkit);
      @include prefix(flex-direction, column, webkit);
      @include prefix(justify-content, space-between, webkit);
      div.game-info {
        margin: 1em 0;
        max-width: 100%;
      }
    }
    div#game-cards {
      max-width: 73%;
      margin: 1%;
    }
  }



} /* Ends media query for medium screens */

